website/versioned_docs/version-1.11.x/use-cases/data/database-cdn/index.md
---
title: 'Database CDN for Enhanced Performance'
sidebar_label: 'Database CDN'
sidebar_position: 12
description: 'Spice.ai acts as a database CDN for SaaS applications, caching dynamic data to ensure high performance and resilience.'
pagination_prev: null
pagination_next: null
---

Spice.ai acts as a database CDN for SaaS applications, caching dynamic data to ensure high performance and resilience in high-traffic, customer-facing environments.

Unlike traditional CDNs (e.g., Cloudflare, Akamai) designed for static content delivery, Spice.ai focuses on dynamic, operational data with real-time caching and materialization, delivering superior performance and uptime compared to cloud-dependent databases or generic caching solutions. This makes it ideal for SaaS platforms requiring low-latency data access and continuous availability to support seamless user experiences.

## Why Spice.ai?

- **Dynamic Data Colocation**: Caches dynamic data (e.g., user sessions, application states) locally using Change Data Capture (CDC), reducing latency compared to remote database queries, critical for responsive SaaS applications.
- **Resilience**: Maintains local data replicas to ensure availability during cloud outages or network disruptions, unlike cloud-dependent architectures that risk downtime in high-traffic scenarios.
- **Scalability**: Optimizes data access for high concurrency, supporting thousands of simultaneous users, surpassing traditional database setups that struggle with scale in SaaS environments.
- **Monitoring**: Provides end-to-end visibility into cache performance, data freshness, and system health through built-in observability, ensuring reliability and rapid debugging, unlike fragmented monitoring in generic caching tools.

## Example

A SaaS customer relationship management (CRM) platform caches user interaction data and account states locally, ensuring uninterrupted access to critical features during peak usage or cloud outages. This delivers a seamless user experience, unlike cloud-only platforms prone to latency spikes or downtime, improving customer satisfaction and retention. The [CQRS Cookbook](https://github.com/spiceai/cookbook/tree/trunk/cqrs#readme) illustrates colocation strategies for such use cases.

### Example Configuration

```yaml
datasets:
  - from: postgres:crm_db.user_sessions
    name: user_sessions
    acceleration:
      enabled: true
      engine: duckdb
      mode: file
      refresh_mode: changes
      refresh_check_interval: 1m
```

This configuration accelerates the `user_sessions` table from a PostgreSQL database, storing it locally in DuckDB file mode for fast, resilient access.

## Benefits

- **Availability**: Local replicas ensure uptime, improving user trust and retention in SaaS applications.
- **Performance**: Reduced latency improves responsiveness for customer-facing features, critical for user engagement.
- **Scalability**: Supports high user concurrency, enabling growth without performance degradation.

### Learn More
